feat: complete curd post api
